Exporting to glitchdotcom/glitch-hello-website ./index.html:31317407/12 ./script.js:31317407/10 ./README.md:31317407/29

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </p>
           <!-- ADD BUTTON HERE -->
           
-          <!-- Once you've added the button from the readme, click it in the page -->
+          <!-- Once you've added the button from the TODO, click it in the page -->
           <!-- Check out the function in script.js to see how it works -->
         </div>
       </div>
