--- a/index.html
+++ b/index.html
@@ -1,88 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--
-      This is the page head - it contains info the browser uses to display the page
-      You won't see what's in the head in the page
-      Scroll down to the body element for the page content
+    <!-- 
+      This is an HTML comment
+      You can write text in a comment and the content won't be visible in the page
     -->
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
 
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
+    <!--
+      This is the page head - it contains info the browser uses
+      Like the title, which appears on the browser tab but not inside the page
+      Further down you'll see the content that displays in the page
     -->
-
     <title>Hello World!</title>
 
-    <!-- Meta tags for SEO and social sharing -->
-    <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
-    <meta
-      name="description"
-      content="A simple website, built with Glitch. Remix it to get your own."
-    />
-    <meta name="robots" content="index,follow" />
-    <meta property="og:title" content="Hello World!" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://glitch-hello-website.glitch.me/" />
-    <meta
-      property="og:description"
-      content="A simple website, built with Glitch. Remix it to get your own."
-    />
-    <meta
-      property="og:image"
-      content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-website-social.png?v=1616712748147"
-    />
-    <meta name="twitter:card" content="summary" />
-
-    <!-- Import the webpage's stylesheet -->
+    <!-- The website stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
-    <!-- Import the webpage's javascript file -->
+    <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
   </head>
   <body>
     <!--
-      This is the body of the page
-      Look at the elements and see how they appear in the rendered page on the right
-      Each element is defined using tags, with < and > indicating where each one opens and closes
-      There are elements for sections of the page, images, text, and more
-      The elements include attributes referenced in the CSS for the page style
+      The body includes the content you see in the page
+      Each element is defined using tags, like this <div></div>
+      The attributes like class="wrapper" let us style elements in the CSS
     -->
-
-    <!-- The wrapper and content divs set margins and positioning -->
     <div class="wrapper">
       <div class="content" role="main">
-        <!-- This is the start of content for our page -->
         <h1 class="title">Hello World!</h1>
-
         <img
           src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
         />
-        <!-- Instructions on using this project -->
         <div class="instructions">
-          <h2>
-            Using this project
-          </h2>
+          <h2>Using this project</h2>
           <p>
             This is the Glitch <strong>Hello Website</strong> project. You can
-            use it to build your own site. Check out README.md in the editor for
-            more info and next steps you can take!
+            use it to build your own site. Check out the code in the editor and open
+            the <span class="fileopener" data-file="TODO.md" data-line="0"
+              >TODO</span> for next steps!
           </p>
-          <!-- ADD BUTTON HERE -->
-          
-          <!-- Once you've added the button from the TODO, click it in the page -->
+          <!--  🚧 TODO: ADD BUTTON HERE -->
+
+          <!-- Once you've added the button from TODO.md, click it in the page -->
           <!-- Check out the function in script.js to see how it works -->
         </div>
       </div>
     </div>
-    <!-- The footer holds our remix button — you can use it for structure or cut it out ✂ -->
+    <!-- The footer holds our remix button — you can keep or delete it ✂ -->
     <footer class="footer">
       <div class="links"></div>
       <a
