--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  
-<a href="new.html"><img src="https://cdn.glitch.global/070acf45-c183-459b-b4a2-f1eb559702a8/Screenshot%202023-09-21%209.57.23%20AM.png?v=1695906895417" alt="Chat Gpt Clone " width="350" height="350"></a>
+    <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-09-21%209.57.23%20AM.png?v=1698327533041" alt="Clever" width="100" height="100">Clever</h1>
+  <img src="h" alt="Chat Gpt" width="500" height="600">
+<a href="new.html"><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/download.png?v=1698327122590" alt="Chat Gpt" width="350" height="350"></a>
 
-  
   </head>
   <body>
     
