--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <img src="h" alt="EagleCraft" width="250" height="200">
 <a href="2new.html"><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%2010.04.24%20AM.png?v=1698332898480" alt="Chat Gpt" width="100" height="100"></a>
 
+     <img src="h" alt="Monkey Mart" width="250" height="200">
+<a href="3new.html"><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%2010.04.24%20AM.png?v=1698332898480" alt="Chat Gpt" width="100" height="100"></a>
   </head>
   <body>
     
