--- a/3new.html
+++ b/3new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://nimble-prickly-mayflower.glitch.me" width="1200" height="750">
+<embed type="text/html" src="http://monkey-mart.glitch.me/" width="1200" height="750">
