🎓🗼 Checkpoint ./index.html:60785523/42 ./3new.html:60785523/104 ./4new.html:60785523/145

--- a/3new.html
+++ b/3new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="http://monkey-mart.glitch.me/" width="1200" height="750">
+<embed type="text/html" src="https://gather-proxy.com/" width="1200" height="750">
