--- a/4new.html
+++ b/4new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://marshy-glass-jasmine.glitch.me" width="1200" height="750">
+<embed type="text/html" src="" width="1200" height="750">
