--- a/3new.html
+++ b/3new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://gather-proxy.com/" width="1200" height="750">
+<embed type="text/html" src="https://www.geenxt.com/blog/tiktok-unblocked-website/" width="1200" height="750">
