🚀👞 Checkpoint ./3new.html:60785523/70 ./index.html:60785523/29

--- a/3new.html
+++ b/3new.html
@@ -1,1 +1,1 @@
-<embed type="https://www.hihoy.com/time-shooter/" width="1200" height="750">
+<embed type="https://2d-rocket-league.glitch.me/" width="1200" height="750">
