🚁🍲 Checkpoint ./index.html:60785523/10

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%209.57.28%20AM.png?v=1698332272683" alt="Clever" width="100" height="100">Clever<p><a href="4new.html"></a></p></h1>
+    <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%209.57.28%20AM.png?v=1698332272683" alt="Clever" width="100" height="100">Clever<p><a href="4new.html">iReady</a></p></h1>
   <img src="h" alt="Chat Gpt" width="250" height="200">
 <a href="new.html"><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/download.png?v=1698327122590" alt="Chat Gpt" width="100" height="100"></a>
  
