🐋💴 Checkpoint ./6new.html:60785523/74 ./index.html:60785523/264

--- a/6new.html
+++ b/6new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://moonlight.silvereen.net/#m" width="1200" height="750">
+<embed type="text/html" src="https://chip-chipped-wednesday.glitch.me" width="1200" height="750">
