--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
      <img src="h" alt="2d rocket league " width="250" height="200">
 <a href="3new.html"><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/download.jpeg?v=1698434236918" alt="Chat Gpt" width="100" height="100"></a>
+        <img src="h" alt="Fnaf 1 " width="250" height="200">
+<a href="6new.html"><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/download.jpeg?v=1698434236918" alt="Chat Gpt" width="100" height="100"></a>
   </head>
   <body>
     
