🎾🏛 Checkpoint ./13new.html:60785523/72 ./index.html:60785523/228

--- a/13new.html
+++ b/13new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://strong-fresh-oregano.glitch.me/movies.html" width="1200" height="750">
+<embed type="text/html" src="https://68game.casino/" width="1200" height="750">
