--- a/13new.html
+++ b/13new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://68game.casino/" width="1200" height="750">
+<embed type="text/html" src="https://clever-work-00.glitch.me/5new.html" width="1200" height="750">
