💑💎 Checkpoint ./16new.html:60785523/165 ./index.html:60785523/317

--- a/16new.html
+++ b/16new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://school.artclass.site/" width="1200" height="750">
+<embed type="text/html" src="https://www.universe.com/users/myflixer-VJS3D5" width="1200" height="750">
