--- a/3new.html
+++ b/3new.html
@@ -1,1 +1,4 @@
+<h1>
+  <a href="https://classroom.google.com/">Panic</a>
+</h1>
 <embed type="https://2d-rocket-league.glitch.me/" width="1200" height="750">
