--- a/5new.html
+++ b/5new.html
@@ -1,1 +1,4 @@
+<h1>
+  <a href="https://classroom.google.com/">Panic</a>
+</h1>
 <embed type="text/html" src="https://sonic-3d-blast.glitch.me/" width="1200" height="750">
