--- a/6new.html
+++ b/6new.html
@@ -1,1 +1,4 @@
+<h1>
+  <a href="https://classroom.google.com/">Panic</a>
+</h1>
 <embed type="text/html" src="https://chip-chipped-wednesday.glitch.me" width="1200" height="750">
