🎲🏈 Checkpoint ./16new.html:60785523/1057

--- a/16new.html
+++ b/16new.html
@@ -12,4 +12,19 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
-</h1>
+Updates</h1>
+<p>
+  
+Added 
+<p>
+Added proxy and youtube Nov 14,2023  
+</p>
+added Subway Surfers  Run 3   slope 2   Basketball Stars  Madalin Cars   Ducklife Space   Abc Games  2playergames  Nov 10,2023
+</p>
+<p>
+  Added rocket league Fnaf 1 and Sonic 3D Nov 2, 2023
+</p>
+<p>
+Added feedback, chat gpt and minecraft. Also made the Clever Heading Nov 1,2023
+</p>
+Website was created on Oct 29,2023
