🛰👢 Checkpoint ./16new.html:60785523/115 ./17new.html:60785523/214 ./index.html:60785523/9618

--- a/16new.html
+++ b/16new.html
@@ -14,8 +14,10 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 Updates</h1>
 <p>
-  
-Added 
+  <p>
+    Added Update html Nov 17, 2023
+</p>
+Added Panic buttons they bring you to google classroom Nov 15,2023
 <p>
 Added proxy and youtube Nov 14,2023  
 </p>
