🎲⚓️ Checkpoint ./16new.html:60785523/19 ./index.html:60785523/13626 ./18new.html:60785523/238

--- a/16new.html
+++ b/16new.html
@@ -15,7 +15,7 @@ s0.parentNode.insertBefore(s1,s0);
 Updates</h1>
 <p>
   <p>
-    Added Update html Nov 17, 2023
+    Added Update html Added Time Sphere  Nov 17, 2023
 </p>
 Added Panic buttons they bring you to google classroom Nov 15,2023
 <p>
