--- a/14new.html
+++ b/14new.html
@@ -13,4 +13,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://clever-work-00.glitch.me/6new.html" width="1200" height="750">
+<embed type="text/html" src="https://brave-vaulted-editor.glitch.me/" width="1200" height="750">
