📚🏯 Checkpoint ./14new.html:60785523/273

--- a/14new.html
+++ b/14new.html
@@ -14,3 +14,10 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 <embed type="text/html" src="https://brave-vaulted-editor.glitch.me/" width="1200" height="750">
+<p>
+  WAIT FOR IT TO LOAD
+  
+</p>
+<p>
+  If it does not load <embed type="text/html" src="https://clever-work-00.glitch.me/6new.html" width="1200" height="750">
+</p>
