🎖🎖 Checkpoint ./index.html:60785523/31907 ./17new.html:60785523/98 ./16new.html:60785523/29

--- a/17new.html
+++ b/17new.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="https://dsf.pr.wip.la/service/hvtrs8%2F-tkmgsrhgrg.levtckpio.perl%2Ccm%2F" width="1200" height="750">
+<embed type="text/html" src="https://myphysicslab.com/" width="1200" height="750">
