--- a/16new.html
+++ b/16new.html
@@ -13,7 +13,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 Updates</h1>
-<p>
+<p>Added Physics lab Nov 28,2023
   <p>
     Added Update html Added Time Sphere  Nov 17, 2023
 </p>
