🏆🐓 Checkpoint ./14new.html:60785523/81

--- a/14new.html
+++ b/14new.html
@@ -14,4 +14,4 @@ s0.parentNode.insertBefore(s1,s0);
   <h1>
     <a href="https://classroom.google.com/">Panic</a> 
   </h1> 
-  <embed type="text/html" src=""/6new.html" width="1200" height="750">
+  <embed type="text/html" src="https://bubble-tangy-guardian.glitch.me/" width="1200" height="750">
