--- a/17new.html
+++ b/17new.html
@@ -1,2 +1,2 @@
-<embed type="text/html" src="https://scarce-iodized-hornet.glitch.me" width="1200" height="750">
-https://myphysicslab.com/
+<embed type="text/html" src="https://myphysicslab.com" width="1200" height="750">
+https://myphysicslab.com
