--- a/16new.html
+++ b/16new.html
@@ -14,7 +14,7 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 Updates</h1>
 <p>
-  Added Chat Dec 4, 2023
+  Added Arras.io and Chat Dec 4, 2023
 </p>
 <p>Added Physics lab Nov 28,2023
   <p>
