📖🙍 Checkpoint ./17new.html:60785523/54

--- a/17new.html
+++ b/17new.html
@@ -1,2 +1,2 @@
-<embed type="text/html" src="https://myphysicslab.com" width="1200" height="750">
+<embed type="text/html" src="https://doge-clever.glitch.me/" width="1200" height="750">
 https://myphysicslab.com
