🐑🎬 Checkpoint ./4new.html:60785523/6 ./2new.html:60785523/6

--- a/4new.html
+++ b/4new.html
@@ -13,4 +13,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://bruhlifespac3.glitch.me/" width="1200" height="750">
+<embed type="text/html" src="https://bruhlifespac3.glitch.me/" width="100%" height="750">
