--- a/12new.html
+++ b/12new.html
@@ -13,4 +13,5 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://forms.gle/6LW9W5rYWEDAp2LG9" width="1200" height="750">
+
+ <iframe allowfullscreen src="https://forms.gle/6LW9W5rYWEDAp2LG9" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
