--- a/14new.html
+++ b/14new.html
@@ -14,4 +14,5 @@ s0.parentNode.insertBefore(s1,s0);
   <h1>
     <a href="https://classroom.google.com/">Panic</a> 
   </h1> 
-  <embed type="text/html" src="https://bubble-tangy-guardian.glitch.me/" width="1200" height="750">
+ 
+<iframe allowfullscreen src="https://bubble-tangy-guardian.glitch.me/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
