--- a/19new.html
+++ b/19new.html
@@ -13,7 +13,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://heliotrope-steadfast-mustang.glitch.me
 
-" width="1200" height="750">
+<iframe allowfullscreen src="https://heliotrope-steadfast-mustang.glitch.me"style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+
     
