--- a/8new.html
+++ b/8new.html
@@ -13,4 +13,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://slope2.glitch.me/ark.html" width="1200" height="750">
+<iframe allowfullscreen src="https://slope2.glitch.me/ark.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
