--- a/9new.html
+++ b/9new.html
@@ -13,4 +13,5 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://ms2-and-bask.glitch.me/basketball-star/" width="1200" height="750">
+<embed type="text/html" src="https://basketball-stars.io/" width="1200" height="750">
+<iframe allowfullscreen src="https://tbg95.github.io/basketball-stars/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
