--- a/15new.html
+++ b/15new.html
@@ -13,5 +13,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://clever-work-00.glitch.me/4new.html" width="1200" height="750">
-<iframe allowfullscreen src="https://bubble-tangy-guardian.glitch.me/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
+<iframe allowfullscreen src="https://2playergamesunblocked.blogspot.com/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
