🐫🦃 Checkpoint ./index.html:60785523/97

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<img src="img_girl.jpg" alt="blocked" width="500" height="600">
-<a href="new.html"><img src="https://cdn.glitch.global/070acf45-c183-459b-b4a2-f1eb559702a8/Screenshot%202023-09-21%209.57.23%20AM.png?v=1695906895417" alt="Girl in a jacket" width="350" height="350"></a>
+Blocked By GoGuardian
+<a href="2index.html"><img src="https://cdn.glitch.global/070acf45-c183-459b-b4a2-f1eb559702a8/Screenshot%202023-09-21%209.57.23%20AM.png?v=1695906895417" alt="Girl in a jacket" width="350" height="350"></a>
