--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-Blocked By GoGuardian
+<h1>
+  Blocked By GoGuardian let your administrator know if this is a mistake.
+</h1>
 <a href="2index.html"><img src="https://cdn.glitch.global/070acf45-c183-459b-b4a2-f1eb559702a8/Screenshot%202023-09-21%209.57.23%20AM.png?v=1695906895417" alt="Girl in a jacket" width="350" height="350"></a>
