--- a/9new.html
+++ b/9new.html
@@ -13,5 +13,4 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-<embed type="text/html" src="https://basketball-stars.io/" width="1200" height="750">
-<iframe allowfullscreen src="https://titanium-fascinated-thunbergia.glitch.me" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://codeprojects.org/projects/weblab/IBR85J_LGmotzOqAK0VFZ1ZgUx6KaiQtG_tlj2BmZc8/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
