🍎📟 Checkpoint ./2index.html:60785523/494 ./16new.html:60785523/109 ./22new.html:60785523/697

--- a/16new.html
+++ b/16new.html
@@ -14,6 +14,9 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 Updates</h1>
 <p>
+  Fixed basketball stars and minecraft added cookie clicker and retrobowl. Jan 5,2024
+</p>
+<p>
   Added Arras.io and Chat Dec 4, 2023
 </p>
 <p>Added Physics lab Nov 28,2023
