🙌🎃 Checkpoint ./22new.html:60785523/120 ./23new.html:60785523/832 ./2index.html:60785523/307 ./24new.html:60785523/708

--- a/2index.html
+++ b/2index.html
@@ -22,6 +22,8 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
+       <img src="h" alt="MonkeyMart " width="250" height="200">
+<a href="23new.html"><img src="https://topvazstore.github.io/img/monkey-mart.png" alt="Chat Gpt" width="100" height="100"></a>
      <img src="h" alt="retrobowl " width="250" height="200">
 <a href="22new.html"><img src="https://topvazstore.github.io/img/retro-bowl.png" alt="Chat Gpt" width="100" height="100"></a>
             <img src="h" alt="Basketball Stars " width="250" height="200">
