🎱🌕 Checkpoint ./2index.html:60785523/236 ./16new.html:60785523/55 ./26.html:60785523/778

--- a/16new.html
+++ b/16new.html
@@ -13,6 +13,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 Updates</h1>
+Added bunch of new games Jan 8, 2024
 <p>
   Fixed basketball stars and minecraft added cookie clicker and retrobowl. Jan 5,2024
 </p>
