--- a/2index.html
+++ b/2index.html
@@ -22,8 +22,10 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
+              <img src="h" alt="Raft Wars " width="250" height="200">
+<a href="25new.html"><img src="https://topvazstore.github.io/img/getaway-shootout.png" alt="Chat Gpt" width="100" height="100"></a>
         <img src="h" alt="GetawayShoot Out " width="250" height="200">
-<a href="24new.html"><img src="https://topvazstore.github.io/img/getaway-shootout.png" alt="Chat Gpt" width="100" height="100"></a>
+<a href="25new.html"><img src="https://topvazstore.github.io/img/getaway-shootout.png" alt="Chat Gpt" width="100" height="100"></a>
         <img src="h" alt="DriveMad " width="250" height="200">
 <a href="24new.html"><img src="https://topvazstore.github.io/img/drive-mad.png" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="MonkeyMart " width="250" height="200">
