✨🛳 Checkpoint ./2index.html:60785523/228

--- a/2index.html
+++ b/2index.html
@@ -23,7 +23,7 @@ s0.parentNode.insertBefore(s1,s0);
       
       </p>
               <img src="h" alt="Raft Wars " width="250" height="200">
-<a href="25new.html"><img src="https://topvazstore.github.io/img/getaway-shootout.png" alt="Chat Gpt" width="100" height="100"></a>
+<a href="26.html"><img src="https://topvazstore.github.io/img/raft-wars.png" alt="Chat Gpt" width="100" height="100"></a>
         <img src="h" alt="GetawayShoot Out " width="250" height="200">
 <a href="25new.html"><img src="https://topvazstore.github.io/img/getaway-shootout.png" alt="Chat Gpt" width="100" height="100"></a>
         <img src="h" alt="DriveMad " width="250" height="200">
