--- a/2index.html
+++ b/2index.html
@@ -22,7 +22,10 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
-      
+       <img src="h" alt="HouseOfHazards" width="250" height="200">
+<a href="29new.html"><img src="https://topvazstore.github.io/img/house-of-hazards.png" alt="Chat Gpt" width="100" height="100"></a>
+      <img src="h" alt=" RocketLeague" width="250" height="200">
+<a href="28new.html"><img src="https://topvazstore.github.io/img/rocket-soccer-derby.png" alt="Chat Gpt" width="100" height="100"></a>
               <img src="h" alt=" Monstertruck" width="250" height="200">
 <a href="27new.html"><img src="https://topvazstore.github.io/img/monster-tracks.png" alt="Chat Gpt" width="100" height="100"></a>
               <img src="h" alt="Raft Wars " width="250" height="200">
