🐾🌸 Checkpoint ./2index.html:60785523/335 ./30new.html:60785523/776

--- a/2index.html
+++ b/2index.html
@@ -21,7 +21,9 @@ s0.parentNode.insertBefore(s1,s0);
      Games are not made by me
      Proxy IS working.<p>
       
-      </p>
+      </p> 
+      <img src="h" alt="Jelly Truck" width="250" height="200">
+<a href="30new.html"><img src="https://topvazstore.github.io/img/jelly-truck.png" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="HouseOfHazards" width="250" height="200">
 <a href="29new.html"><img src="https://topvazstore.github.io/img/house-of-hazards.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt=" RocketLeague" width="250" height="200">
