🙆🛩 Checkpoint ./31new.html:60785523/784 ./2index.html:60785523/674 ./32new.html:60785523/850

--- a/2index.html
+++ b/2index.html
@@ -22,6 +22,10 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p> 
+         <img src="h" alt="SuperLiquidSoccer" width="250" height="200">
+<a href="32new.html"><img src="https://topvazstore.github.io/img/super-liquid-soccer.png" alt="Chat Gpt" width="100" height="100"></a>
+      <img src="h" alt="4thandGoal2022" width="250" height="200">
+<a href="31new.html"><img src="https://topvazstore.github.io/img/4th-and-goal-2022.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="Jelly Truck" width="250" height="200">
 <a href="30new.html"><img src="https://topvazstore.github.io/img/jelly-truck.png" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="HouseOfHazards" width="250" height="200">
