--- a/2index.html
+++ b/2index.html
@@ -21,7 +21,9 @@ s0.parentNode.insertBefore(s1,s0);
      Games are not made by me
      Proxy IS working.<p>
       
-      </p> 
+      </p>
+      <img src="h" alt="StupidZombies" width="250" height="200">
+<a href="33new.html"><img src="https://topvazstore.github.io/img/stupid-zombies.png" alt="Chat Gpt" width="100" height="100"></a>
          <img src="h" alt="SuperLiquidSoccer" width="250" height="200">
 <a href="32new.html"><img src="https://topvazstore.github.io/img/super-liquid-soccer.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="4thandGoal2022" width="250" height="200">
