--- a/2index.html
+++ b/2index.html
@@ -22,6 +22,8 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
+      <img src="h" alt="StealingTheDiamond" width="250" height="200">
+<a href="34new.html"><img src="https://topvazstore.github.io/img/stealing-the-diamond.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="StupidZombies" width="250" height="200">
 <a href="33new.html"><img src="https://topvazstore.github.io/img/stupid-zombies.png" alt="Chat Gpt" width="100" height="100"></a>
          <img src="h" alt="SuperLiquidSoccer" width="250" height="200">
