🗻📉 Checkpoint ./35new.html:60785523/853 ./2index.html:60785523/839 ./36new.html:60785523/709

--- a/2index.html
+++ b/2index.html
@@ -22,6 +22,10 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
+          <img src="h" alt="MaskedForces" width="250" height="200">
+<a href="36new.html"><img src="https://abinbins.github.io/thumb/masked-forces.png" alt="Chat Gpt" width="100" height="100"></a>
+      <img src="h" alt="DreadHeadParkour" width="250" height="200">
+<a href="35new.html"><img src="https://topvazstore.github.io/img/dreadhead-parkour.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="StealingTheDiamond" width="250" height="200">
 <a href="34new.html"><img src="https://topvazstore.github.io/img/stealing-the-diamond.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="StupidZombies" width="250" height="200">
