--- a/2index.html
+++ b/2index.html
@@ -22,6 +22,10 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
+      <img src="h" alt="LegoStarWars" width="250" height="200">
+<a href="38new.html"><img src="https://cdn.mos.cms.futurecdn.net/3D9dh6TgNMUXwC7kYD5rP-1200-80.jpg" alt="Chat Gpt" width="100" height="100"></a>
+      <img src="h" alt="GTA 6 LEAKED DEMO" width="250" height="200">
+<a href="37new.html"><img src="https://cdn.mos.cms.futurecdn.net/3D9dh6TgNMUXwC7kYD5rP-1200-80.jpg" alt="Chat Gpt" width="100" height="100"></a>
           <img src="h" alt="MaskedForces" width="250" height="200">
 <a href="36new.html"><img src="https://abinbins.github.io/thumb/masked-forces.png" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="DreadHeadParkour" width="250" height="200">
