🕶🍭 Checkpoint ./2index.html:60785523/913 ./39new.html:60785523/787 ./40new.html:60785523/788 ./38new.html:60785523/98

--- a/2index.html
+++ b/2index.html
@@ -22,8 +22,11 @@ s0.parentNode.insertBefore(s1,s0);
      Proxy IS working.<p>
       
       </p>
+            <img src="h" alt="NBA JAM 2002" width="250" height="200">
+<a href="40new.html"><img src="https://m.media-amazon.com/images/I/61kP8KIJZ7L.jpg" alt="Chat Gpt" width="100" height="100"></a>
+      
       <img src="h" alt="LegoStarWars" width="250" height="200">
-<a href="38new.html"><img src="https://cdn.mos.cms.futurecdn.net/3D9dh6TgNMUXwC7kYD5rP-1200-80.jpg" alt="Chat Gpt" width="100" height="100"></a>
+<a href="38new.html"><img src="https://assets-prd.ignimgs.com/2022/04/02/legosw-1648857996387.jpg" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="GTA 6 LEAKED DEMO" width="250" height="200">
 <a href="37new.html"><img src="https://cdn.mos.cms.futurecdn.net/3D9dh6TgNMUXwC7kYD5rP-1200-80.jpg" alt="Chat Gpt" width="100" height="100"></a>
           <img src="h" alt="MaskedForces" width="250" height="200">
