--- a/10new.html
+++ b/10new.html
@@ -13,5 +13,5 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script--><h1>
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
-
+<embed type="image/jpg" src="https://media.licdn.com/dms/image/C5103AQFCt6pvgPtJJw/profile-displayphoto-shrink_800_800/0/1517066053842?e=2147483647&v=beta&t=uMB_Cg-iIj_znZbZyQzStc5eA5jOIPVuY4BB5eEyZ5E" width="5" height="5">
     <iframe allowfullscreen src="https://arkas.glitch.me/madalin-cars-multiplayer/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
