🏑🏗 Checkpoint ./42new.html:60785523/2512 ./2index.html:60785523/372

--- a/2index.html
+++ b/2index.html
@@ -16,12 +16,13 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
     <body>
   <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%209.57.28%20AM.png?v=1698332272683" alt="Clever" width="100" height="100">Clever<p>   Games are not made by me
-     Proxy IS  working. <a href="https://classroom.google.com/">Panic
+     Proxy IS NOT working. <a href="https://classroom.google.com/">Panic
 </h1>
    
   
   
-      
+        <img src="h" alt="GeometryGames" width="250" height="200">
+<a href="42new.html"><img src="https://developer.android.com/static/images/cluster-illustrations/controllers.svg" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="SoccerRandomGithub" width="250" height="200">
 <a href="41new.html"><img src="https://soccer-random.github.io/images/logo.png" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="MathGames66" width="250" height="200">
