--- a/20new.html
+++ b/20new.html
@@ -1,3 +1,4 @@
 <div style="width:100%;height:0;padding-bottom:85%;position:relative;"><iframe src="https://giphy.com/embed/g7GKcSzwQfugw" width="250" height="250" style="position:absolute" frameBorder="0" class="giphy-embed"></iframe></div><p><a href="https://giphy.com/gifs/rick-roll-g7GKcSzwQfugw">via GIPHY</a></p>
 You really thought
-<a href="39new.html"><img src="https://media.licdn.com/dms/image/C5103AQFCt6pvgPtJJw/profile-displayphoto-shrink_800_800/0/1517066053842?e=2147483647&v=beta&t=uMB_Cg-iIj_znZbZyQzStc5eA5jOIPVuY4BB5eEyZ5E" alt="Chat Gpt" width="5" height="5"></a>
+<div style="width:3%;height:3;padding-bottom:85%;position:relative;"><iframe src="https://media.licdn.com/dms/image/C5103AQFCt6pvgPtJJw/profile-displayphoto-shrink_800_800/0/1517066053842?e=2147483647&v=beta&t=uMB_Cg-iIj_znZbZyQzStc5eA5jOIPVuY4BB5eEyZ5E" width="250" height="250" style="position:absolute" frameBorder="0" class="giphy-embed"></iframe></div><p><a href="https://giphy.com/gifs/rick-roll-g7GKcSzwQfugw">via GIPHY</a></p>
+ 
