👶👾 Checkpoint ./43new.html:60785523/760 ./2index.html:60785523/376

--- a/2index.html
+++ b/2index.html
@@ -20,7 +20,8 @@ s0.parentNode.insertBefore(s1,s0);
 </h1>
    
   
-  
+    <img src="h" alt="Infinite Craft" width="250" height="200">
+<a href="43new.html"><img src="https://neal.fun/share-cards/infinite-craft.png" alt="Chat Gpt" width="100" height="100"></a>
         <img src="h" alt="GeometryGames" width="250" height="200">
 <a href="42new.html"><img src="https://developer.android.com/static/images/cluster-illustrations/controllers.svg" alt="Chat Gpt" width="100" height="100"></a>
        <img src="h" alt="SoccerRandomGithub" width="250" height="200">
