--- a/47new.html
+++ b/47new.html
@@ -14,4 +14,10 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe  src="https://shuttleproxy.com/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<h2>Directions:
+1 Go to settings
+2 click about blank 
+3 have fun
+  
+</h2>
+<embed type="text/html" src="https://gointerstellar.app/" width="1000" height="1000">
