--- a/47new.html
+++ b/47new.html
@@ -20,4 +20,5 @@ s0.parentNode.insertBefore(s1,s0);
 3 have fun
   
 </h2>
-<embed type="text/html" src="https://gointerstellar.app/" width="1000" height="1000">
+<iframe allowfullscreen src="https://gwcs9j-8080.csb.app/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+http://codesandbox.io/p/github/FazeSyphon/Interstellar
