--- a/47new.html
+++ b/47new.html
@@ -14,11 +14,18 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<h2>Directions:
-1 Go to settings
-2 click about blank 
-3 have fun
-  
-</h2>
-<iframe allowfullscreen src="https://z542c7-8080.csb.app/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
-http://codesandbox.io/p/github/FazeSyphon/Interstellar
+Directions:
+1 put this link in your browser:https://z542c7-8080.csb.app/
+
+<p1>2 Go to settings
+
+  </p1>
+  3 click about blank 
+
+<p1> 
+4 search something up example: youtube
+
+</p1>
+5 click the youtube link
+<p1>6 if doesnt work hit the refresh button </p1>
+
