🚖⛱ Checkpoint ./47new.html:60785523/1922

--- a/47new.html
+++ b/47new.html
@@ -14,18 +14,23 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-Directions:
-1 put this link in your browser:https://z542c7-8080.csb.app/
+<h2>
+  Directions
+</h2>6 
 
-<p1>2 Go to settings
+1 put this link in your browser: https://my74v6-8080.csb.app/
+<p>
+  Fixed basketball stars and minecraft added cookie clicker and retrobowl. Jan 5,2024
+</p>
+<p>
+  2 Go to settings
+</p>
+<p> 3 click about blank 
+  <p>
+   4 search something up example: youtube
 
-  </p1>
-  3 click about blank 
-
-<p1> 
-4 search something up example: youtube
-
-</p1>
+</p>
 5 click the youtube link
-<p1>6 if doesnt work hit the refresh button </p1>
-
+<p>
+6 if doesnt work hit the refresh button in right corner than try again  
+</p>
