🐸🐀 Checkpoint ./47new.html:60785523/188

--- a/47new.html
+++ b/47new.html
@@ -16,7 +16,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 <h2>
   Directions
-</h2>6 
+</h2>6                        LINK 2 NO DIRECTIONS BUT CLICK OPEN BROWSER Rammerpro.glitch.me
 
 1 put this link in your browser: https://my74v6-8080.csb.app/
 <p>
@@ -24,13 +24,12 @@ s0.parentNode.insertBefore(s1,s0);
 </p>
 <p>
   2 Go to settings
-</p>
-<p> 3 click about blank 
-  <p>
-   4 search something up example: youtube
 
-</p>
-5 click the youtube link
+  <p>
+   3 search something up example: youtube
+
+</p>4
+4 click the youtube link
 <p>
-6 if doesnt work hit the refresh button in right corner than try again  
+5 if doesnt work hit the refresh button in right corner than try again  
 </p>
