👄👩‍❤️‍💋‍👩 Checkpoint ./48new.html:60785523/1158

--- a/48new.html
+++ b/48new.html
@@ -14,4 +14,4 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe allowfullscreen src="https://ww4.fmovies.co/24/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://myflixer-official.lol/" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
