--- a/2index.html
+++ b/2index.html
@@ -18,6 +18,8 @@ s0.parentNode.insertBefore(s1,s0);
   <h1><img src="https://cdn.glitch.global/24e416b4-8d33-4e27-8454-6f1f3e029ae9/Screenshot%202023-10-26%209.57.28%20AM.png?v=1698332272683" alt="Clever" width="100" height="100">Clever<p>   Games are not made by me
      Proxy IS  working.  <a href="47new.html">Proxy
 </h1>
+     <img src="h" alt="Getting Over it" width="250" height="200">
+<a href="49new.html"><img src="https://media.wired.com/photos/5a500336968c915c2722eafe/master/w_2560%2Cc_limit/IndieGame-TopArt.jpg" alt="Chat Gpt" width="100" height="100"></a>
    
       <img src="h" alt="CyMath" width="250" height="200">
 <a href="46new.html"><img src="https://play-lh.googleusercontent.com/KN_-a1pQKo1MxFMLaq9T03AysLzPNvW-zzShFrvgh6swlDFHM4q6zKTiaDqN-Nj6wQ" alt="Chat Gpt" width="100" height="100"></a>
