--- a/21new.html
+++ b/21new.html
@@ -14,4 +14,4 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-    <iframe allowfullscreen src="https://geometrydashunblockedgame.github.io/go/basketball-stars.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+    <iframe allowfullscreen src="https://dreadheadparkour.github.io/go/basketball-stars.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
