--- a/32new.html
+++ b/32new.html
@@ -14,4 +14,4 @@ s0.parentNode.insertBefore(s1,s0);
   <a href="https://classroom.google.com/">Panic</a>
 </h1>
 
-<iframe allowfullscreen src="https://geometrydashunblockedgame.github.io/go/super-liquid-soccer.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
+<iframe allowfullscreen src="https://dreadhea.github.io/go/super-liquid-soccer.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>
