--- a/16new.html
+++ b/16new.html
@@ -11,29 +11,4 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script--><h1>
-  <a href="https://classroom.google.com/">Panic</a>
-Updates</h1>
-Added bunch of new games Jan 8, 2024
-<p>
-  Fixed basketball stars and minecraft added cookie clicker and retrobowl. Jan 5,2024
-</p>
-<p>
-  Added Arras.io and Chat Dec 4, 2023
-</p>
-<p>Added Physics lab Nov 28,2023
-  <p>
-    Added Update html Added Time Sphere  Nov 17, 2023
-</p>
-Added Panic buttons they bring you to google classroom Nov 15,2023
-<p>
-Added proxy and youtube Nov 14,2023  
-</p>
-added Subway Surfers  Run 3   slope 2   Basketball Stars  Madalin Cars   Ducklife Space   Abc Games  2playergames  Nov 10,2023
-</p>
-<p>
-  Added rocket league Fnaf 1 and Sonic 3D Nov 2, 2023
-</p>
-<p>
-Added feedback, chat gpt and minecraft. Also made the Clever Heading Nov 1,2023
-</p>
-Website was created on Oct 29,2023
+  <iframe allowfullscreen src="https://www.hoodamath.com/index.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
