--- a/16new.html
+++ b/16new.html
@@ -11,4 +11,4 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script--><h1>
-  <iframe allowfullscreen src="https://www.hoodamath.com/index.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
+  <iframe allowfullscreen src="https://www.hoodamath.com/games/allgames.html" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
