🍱🏕 Checkpoint ./new.html:60785523/74

--- a/new.html
+++ b/new.html
@@ -10,4 +10,4 @@ s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
-<!--End of Tawk.to Script--><embed type="text/html" src="https://quill-warm-wolverine.glitch.me/" width="1200" height="750">
+<!--End of Tawk.to Script--><embed type="text/html" src="https://customgpt.ai/chatgpt-clone/" width="1200" height="750">
