🍅🎽 Checkpoint ./2index.html:60785523/191 ./16new.html:60785523/1356 ./.glitch-assets:60785523/467 ./index.html:60785523/1341

--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<h1>
-  Blocked By GoGuardian let your administrator know if this is a mistake.
-</h1>
-<a href="2index.html"><img src="https://cdn.glitch.global/070acf45-c183-459b-b4a2-f1eb559702a8/Screenshot%202023-09-21%209.57.23%20AM.png?v=1695906895417" alt="Girl in a jacket" width="350" height="350"></a>
+
+<a href="2index.html"><img src="https://cdn.glitch.global/11f9dfc7-d7fd-4bac-80b7-da22c6e5b44e/Screenshot%202024-04-17%208.09.29%20AM.png?v=1713359420828" alt="Girl in a jacket">
