--- a/16new.html
+++ b/16new.html
@@ -11,4 +11,5 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-  <iframe allowfullscreen src"https://deepai.org/machine-learning-model/text2img" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
+ 
+<iframe allowfullscreen src="https://deepai.org/machine-learning-model/text2img" style="position:absolute; top:0px; left:0px; width:100%; height:100%; border: none; overflow: hidden;"></iframe>   
