--- a/2index.html
+++ b/2index.html
@@ -23,7 +23,8 @@ s0.parentNode.insertBefore(s1,s0);
    
      <img src="h" alt="Getting Over it" width="250" height="200">
 <a href="48new.html"><img src="https://media.wired.com/photos/5a500336968c915c2722eafe/master/w_2560%2Cc_limit/IndieGame-TopArt.jpg" alt="Chat Gpt" width="100" height="100"></a>
-   
+         <img src="h" alt="JoeyGame" width="250" height="200">
+<a href="47new.html"><img src="https://play-lh.googleusercontent.com/KN_-a1pQKo1MxFMLaq9T03AysLzPNvW-zzShFrvgh6swlDFHM4q6zKTiaDqN-Nj6wQ" alt="Chat Gpt" width="100" height="100"></a>
       <img src="h" alt="CyMath" width="250" height="200">
 <a href="46new.html"><img src="https://play-lh.googleusercontent.com/KN_-a1pQKo1MxFMLaq9T03AysLzPNvW-zzShFrvgh6swlDFHM4q6zKTiaDqN-Nj6wQ" alt="Chat Gpt" width="100" height="100"></a>
    <img src="h" alt="JotBotAi" width="250" height="200">
