🚩👻 Checkpoint ./47new.html:60785523/18675

--- a/47new.html
+++ b/47new.html
@@ -1,67 +1,141 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Joey Likes Children</title>
-  <style>
-    canvas {
-      border: 1px solid black;
-      display: block;
-      margin: 0 auto;
-    }
-  </style>
+    <title>Snake Game</title>
+    <style>
+        #gameCanvas {
+            border: 1px solid black;
+        }
+    </style>
 </head>
+
 <body>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <script>
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
 
-  <script>
-    const canvas = document.getElementById('gameCanvas');
-    const ctx = canvas.getContext('2d');
+        const scale = 20;
+        const rows = canvas.height / scale;
+        const columns = canvas.width / scale;
 
-    let snake = [{x: 10, y: 10}];
-    let food = {x: 15, y: 15};
-    let direction = 'right';
+        let snake;
+        let food;
+        let enemy;
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+        function setup() {
+            snake = new Snake();
+            food = new Fruit();
+            food.image = new Image();
+            food.image.src = 'https://media.istockphoto.com/id/1074635972/photo/close-up-portrait-of-crying-little-toddler-girl-with-outdoors-background-child.jpg?s=612x612&w=0&k=20&c=JnXGXsyw0cmTHstFjqYnukV6zpsKxzpqTXLjbYNSfW4=';
 
-      // Draw snake
-      ctx.fillStyle = 'green';
-      snake.forEach(segment => {
-        ctx.fillRect(segment.x * 20, segment.y * 20, 20, 20);
-      });
+            enemy = new Enemy();
+            enemy.image = new Image();
+            enemy.image.src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFYGWD1Vnfj1kJBHU-9hOKnHMXJN4DIyKDsJ1p4glXCw&s';
 
-      // Draw food
-      ctx.fillStyle = 'red';
-      ctx.fillRect(food.x * 20, food.y * 20, 20, 20);
-    }
+            food.pickLocation(); 
+            enemy.pickLocation();
+            
+            window.setInterval(() => {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    function update() {
-      const head = {x: snake[0].x, y: snake[0].y};
+                ctx.drawImage(food.image, food.x, food.y, scale, scale);
+                ctx.drawImage(enemy.image, enemy.x, enemy.y, scale, scale);
 
-      if (direction === 'right') head.x++;
-      if (direction === 'left') head.x--;
-      if (direction === 'down') head.y++;
-      if (direction === 'up') head.y--;
+                snake.update();
+                snake.draw();
 
-      snake.unshift(head);
+                if (snake.eat(food)) { 
+                    food.pickLocation(); 
+                    enemy.pickLocation();
+                }
 
-      if (head.x === food.x && head.y === food.y) {
-        food.x = Math.floor(Math.random() * 20);
-        food.y = Math.floor(Math.random() * 20);
-      } else {
-        snake.pop();
-      }
-    }
+                if (snake.collideWithEnemy(enemy)) { 
+                    gameEnd();
+                    return;
+                }
+                
+                snake.checkCollision();
 
-    function gameLoop() {
-      update();
-      draw();
+                document.querySelector('.score')
+                        .innerText = snake.total;
 
-      setTimeout(gameLoop, 100);
-    }
+            }, 250);
+        }
 
-    gameLoop();
-  </script>
+        setup();
+
+        window.addEventListener('keydown', ((evt) => {
+            const direction = evt.key.replace('Arrow', '');
+            snake.changeDirection(direction);
+        }));
+
+        function Snake() {
+            this.x = 0;
+            this.y = 0;
+            this.xSpeed = scale * 1;
+            this.ySpeed = 0;
+            this.total = 0;
+            this.tail = [];
+
+            this.image = new Image();
+            this.image.src = 'https://www.pngarts.com/files/4/Game-Sprite-Snake-PNG-Free-Download.png'
+
+            this.draw = function () {
+                for (let i = 0; i < this.tail.length; i++) {
+                    ctx.drawImage(this.image, this.tail[i].x, this.tail[i].y, scale, scale);
+                }
+
+                ctx.drawImage(this.image, this.x, this.y, scale, scale);
+            }
+
+            this.update = function () {
+                for (let i = 0; i < this.tail.length - 1; i++) {
+                    this.tail[i] = this.tail[i + 1];
+                }
+
+                this.tail[this.total - 1] = { x: this.x, y: this.y };
+
+                this.x += this.xSpeed;
+                this.y += this.ySpeed;
+
+                if (this.x >= canvas.width || this.x < 0 || this.y >= canvas.height || this.y < 0) {
+                    gameEnd();
+                    return;
+                }
+            }
+
+            // Rest of the Snake functions remain unchanged
+        }
+
+        function Fruit() {
+            this.x;
+            this.y;
+            this.image;
+
+            this.pickLocation = function () {
+                this.x = (Math.floor(Math.random() * rows)) * scale;
+                this.y = (Math.floor(Math.random() * columns)) * scale;
+            }
+        }
+
+        function Enemy() {
+            this.x;
+            this.y;
+            this.image;
+
+            this.pickLocation = function () {
+                this.x = (Math.floor(Math.random() * rows)) * scale;
+                this.y = (Math.floor(Math.random() * columns)) * scale;
+            }
+        }
+
+        function gameEnd() {
+            alert('Game Over');
+            window.location.reload();
+        }
+    </script>
 </body>
+
 </html>
